src/test/deca/context/valid/sansObj/readint-int.deca
// Description:
//          Affectation d'un readInt() à un int
//
// Résultat:
//          Succès
{
    int a;
    a = readInt();
}
