src/test/deca/context/invalid/sansObj/readint-bool.deca
// Description:
//          Affectation d'un readInt() à un booléen
//
// Résultat:
//right value int expected boolean
{
    boolean bool;
    bool = readInt();
}
